--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Quiz App</string>
+    <string name="web_client_id">996145256909-mam3sm01i60g6dj0ok9a23agdk0vbbfv.apps.googleusercontent.com</string>
+    <string name="sign_in_to_start_playing">Sign in to start playing</string>
+    <string name="powered_by_firebase_auth">Powered by Firebase Auth</string>
 </resources>
