feat: Add home screen UI and update theme
Introduces the Montserrat font family and updates the app's typography. Refactors the theme to use a custom light color scheme.

Adds a `TopAppBar` component for the home screen and renames `HomeScreen` to `HomeRoute` in the navigation graph.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="web_client_id">996145256909-mam3sm01i60g6dj0ok9a23agdk0vbbfv.apps.googleusercontent.com</string>
     <string name="sign_in_to_start_playing">Sign in to start playing</string>
     <string name="powered_by_firebase_auth">Powered by Firebase Auth</string>
+    <string name="quizzly">Quizzly</string>
 </resources>
